    + Drop --fail-missing from dh_install, it's now dh_missing's default.
  * Extend Makefile to also remove cloudflare crap and generally any
    occurrences of unneeded <script> tags from mkdocs-generated
    documentation. Documentation just doesn't need this! Thanks Lintian!
    + Uses pcregrep to catch multiline <script> tags. Add it as build-dep.
  * Drop debian/unburden-home-dir-doc.lintian-overrides, no more needed.
  * Drom ancient postinst/postrm/preinst files. They were handling a
    configuration file name change in 2012 and nowadays even cause lintian
    warnings.
  * Drop adequate as-installed test as adequate is no more maintained.
    + Also fixes lintian warning obsolete-runtime-tests-restriction.
  * Add lintian override for uses-deprecated-adttmp. This is a false
    positive, it detects the code to make it backwards compatible with
    autopkgtest < v4.
  * Remove mkdocs-generated, but completely useless sitemap.xml* files as
    they solely contain nonsense entries. Also fixes lintian warning
    compressed-duplicate.

 -- Axel Beckert <abe@debian.org>  Sat, 02 Jan 2021 05:39:44 +0100

unburden-home-dir (0.4.1.1) unstable; urgency=medium

  [ Jakub Wilk ]
  * Fix a bunch of typos.

  [ Axel Beckert ]
  * Declare compliance with Debian Policy 4.1.5. (No other changes.)
  * Update build-dependency from "ruby-ronn" to "ronn | ruby-ronn (<<
    0.7.3-5.1~)" due to short-term package split-up. (Closes: #903073)
  * Build-Conflict with libperl-critic-freenode-perl for now.
  * Replace /usr/share/doc/unburden-home-dir/html/search/mustache.min.js
    with symlink in unburden-home-dir-doc and recommend libjs-mustache.
  * Switch to debhelper compatibility level 11.
    + Update versioned debhelper build-dependency accordingly.

 -- Axel Beckert <abe@debian.org>  Thu, 05 Jul 2018 23:16:43 +0200

unburden-home-dir (0.4.1) unstable; urgency=low

  Default/Example Configuration:

  * Switch Chrome/Chromium "Thumbnails" type from file to directory.