@@ -7,6 +7,8 @@ unburden-home-dir (0.4.1.2) UNRELEASED; urgency=medium
     occurrences of unneeded <script> tags from mkdocs-generated
     documentation. Documentation just doesn't need this! Thanks Lintian!
     + Uses pcregrep to catch multiline <script> tags. Add it as build-dep.
+    + Drop recommends and symlink on mustache.js.
+    + Also remove generated search form, search.html and search subfolder.
   * Drop debian/unburden-home-dir-doc.lintian-overrides, no more needed.
   * Drom ancient postinst/postrm/preinst files. They were handling a
     configuration file name change in 2012 and nowadays even cause lintian
